# asciidoc_generator

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  sample.asc  setup.py
scripts/: admonition.lua  asc_tree.py  clean_template.sh  generate.sh  parse.py  setup_dev.sh  style.py  template.py  translate.py  translate.sh
template/: README.asc  frame.fodt  frame.odt  reference.fodt  style.fodt  style.odt  template.fodt
